<resources>
    <string name="app_name">CamCar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="do_not_have_account_create_here">Do not have account! Create Here</string>
    <string name="customer">Customer</string>
    <string name="company">Company</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="next">Next</string>
    <string name="driver">Driver</string>
    <string name="verify">Verify</string>
    <string name="role">By Registering , you confirm that you accept our Term of Use, and Privacy Policy</string>
    <string name="verify_driver">Verify National ID Card</string>
    <string name="user_name">User Name</string>
    <string name="finish">Finish</string>
    <string name="more">More</string>
    <string name="schedule">Schedule</string>
    <string name="price">Price</string>
    <string name="arrive_time">Arrive Time</string>
    <string name="start_time">Start Time</string>
    <string name="arrive">Arrive</string>
    <string name="start">Start</string>
    <string name="update">Update</string>
    <string name="history">History</string>
    <string name="destination">Destination</string>
    <string name="from">From</string>
    <string name="search">Search</string>
    <string name="_100">$100</string>
    <string name="simple_time">00 : 00 AM</string>
    <string name="pick_date">Pick date</string>
    <string name="complete_info">Complete info</string>
    <string name="number_of_person">Number of person</string>
    <string name="book">Book</string>
    <string name="_0">0</string>
    <string name="person">Person</string>
    <string name="date_going">Date Going</string>
    <string name="simple_date">01/01/2020</string>
    <string name="price_per_person">Price/Person</string>
    <string name="total_price">Total Price</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simple_email">user@gmail.com</string>
    <string name="phone_number">phone</string>
    <string name="change_password">Change password</string>
    <string name="driver_info">Driver Info</string>


    <string-array name="num_person">
        <item>Number of person</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
