<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_customer">

    <fragment
        android:id="@+id/nav_customer"
        android:name="com.its.camcar.ui.customer.CustomerFragment"
        android:label="@string/customer"
        tools:layout="@layout/fragment_customer"/>
    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.its.camcar.ui.schedule.ScheduleFragment"
        android:label="@string/schedule"
        tools:layout="@layout/fragment_schedule"/>
    <fragment
        android:id="@+id/nav_company"
        android:name="com.its.camcar.ui.company.CompanyFragment"
        android:label="@string/company"
        tools:layout="@layout/fragment_company"/>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.its.camcar.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>


<!--    Customer-->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.its.camcar.ui.customer_home.CustomerHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_customer_home"/>

    <fragment
        android:id="@+id/nav_history"
        android:name="com.its.camcar.ui.customer_history.CustomerHistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_customer_history"/>

    <fragment
        android:id="@+id/nav_customer_profile"
        android:name="com.its.camcar.ui.customer_profile.CustomerProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_customer_profile"/>

</navigation>