<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <ImageView
        android:src="@drawable/ic_user"
        android:layout_width="150dp"
        android:layout_height="150dp"/>
    <EditText
        android:id="@+id/edt_username"
        android:padding="10dp"
        android:background="@drawable/login_edt_background"
        android:layout_marginTop="25dp"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:inputType="textPassword"
        android:id="@+id/edt_password"
        android:padding="10dp"
        android:background="@drawable/login_edt_background"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_create_account"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/do_not_have_account_create_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>