<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/edt_full_name"
        android:padding="10dp"
        android:background="@drawable/login_edt_background"
        android:layout_marginTop="25dp"
        android:hint="@string/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/edt_email"
        android:padding="10dp"
        android:background="@drawable/login_edt_background"
        android:layout_marginTop="10dp"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:inputType="phone"
        android:id="@+id/edt_phone"
        android:padding="10dp"
        android:background="@drawable/login_edt_background"
        android:layout_marginTop="10dp"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:paddingEnd="45dp"
            android:inputType="textPassword"
            android:id="@+id/edt_password"
            android:padding="10dp"
            android:background="@drawable/login_edt_background"

            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_eye"
            android:tint="@color/colorAccent"
            android:layout_width="25dp"
            android:layout_height="25dp"/>
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg_role"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_weight="1"
            android:text="@string/customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_weight="1"
            android:text="@string/driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_next"
        android:layout_marginTop="15dp"
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>