<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditProfileActivity">

    <ImageView
        android:id="@+id/aep_iv_profile"
        android:src="@drawable/ic_user"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>
    <EditText
        android:id="@+id/aep_edt_full_name"
        android:layout_margin="10dp"
        android:hint="@string/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/aep_edt_phone"
        android:layout_margin="10dp"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/aep_btn_update"
        android:text="@string/update"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>