<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:background="?android:attr/selectableItemBackground"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:contentDescription="@string/driver"
                android:padding="5dp"
                android:src="@drawable/ic_customer_book"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"/>
            <TextView
                android:id="@+id/dbvh_tv_customer_name"
                android:gravity="center_vertical"
                android:text="@string/customer"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/dbvh_tv_created_at"
                android:text="@string/pick_date"
                android:gravity="center_vertical"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/dbvh_tv_start_time"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/simple_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/arrive_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/dbvh_tv_arrive_time"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/simple_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/dbvh_tv_price"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/_100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:background="@color/colorPrimary"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:padding="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView

                    android:id="@+id/dbvh_tv_person"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/date_going"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/dbvh_tv_date_going"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/simple_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:text="@string/total_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/dbvh_tv_total_price"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:text="@string/_100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <View
            android:background="@color/colorPrimary"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            android:layout_marginTop="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:contentDescription="@string/phone"
                android:padding="15dp"
                android:src="@drawable/ic_phone"
                android:layout_width="50dp"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/dbvh_tv_customer_phone"
                android:textSize="16sp"
                android:text="@string/phone"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <View
            android:background="@color/colorPrimary"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textAllCaps="true"
                android:gravity="center_vertical"
                android:text="@string/start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:padding="15dp"
                    android:src="@drawable/ic_start_location"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:id="@+id/dbvh_tv_start"
                    android:gravity="center_vertical"
                    android:text="@string/start"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
            <TextView
                android:textStyle="bold"
                android:textAllCaps="true"
                android:gravity="center_vertical"
                android:text="@string/destination"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:padding="15dp"
                    android:src="@drawable/ic_start_location"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>
                <TextView
                    android:id="@+id/dbvh_tv_arrive"
                    android:gravity="center_vertical"
                    android:text="@string/arrive"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>