<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".ui.customer_home.CustomerHomeFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/fch_actv_from"
                    android:completionHint="@string/from"
                    android:completionThreshold="1"
                    android:layout_margin="10dp"
                    android:hint="@string/from"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:contentDescription="@string/destination"
                    android:padding="10dp"
                    android:src="@drawable/ic_arrow_back_up"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>
                <AutoCompleteTextView
                    android:id="@+id/fch_actv_destination"
                    android:completionHint="@string/destination"
                    android:completionThreshold="1"
                    android:layout_margin="10dp"
                    android:hint="@string/destination"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/fch_btn_search"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>